power: Do most of the work in _start ()

We're not supposed to start listening to signals in _init(),
but in _start(). This fixes a number of potential crashes,
including one when calling out to gnome-desktop.

Thanks for Federico Mena Quintero for the root causing.

https://bugzilla.gnome.org/show_bug.cgi?id=657924